# mit-shin-group.github.io

./: .gitignore  Manifest.toml  Project.toml  README.md  index.html  pyproject.toml
.github/workflows/: build.yml  deploy.yml
_build/: index.html
_build/facilities/: index.html
_build/news/: index.html
_build/people/: index.html
_build/publications/: index.html
_build/research/: index.html
_build/software/: index.html
_build/values/: index.html
ads/: ad1.html
bib/: abet.bib  invt.bib
content/: facilities.html  index.html  people.html  research.html
css/: style.css
dev/: index.html
dev/facilities/: index.html
dev/news/: index.html
dev/people/: index.html
dev/positions/: index.html
dev/publications/: index.html
dev/research/: index.html
dev/software/: index.html
dev/values/: index.html
facilities/: index.html
news/: index.html
people/: index.html
positions/: index.html
publications/: index.html
research/: index.html
shinio/: __init__.py  __main__.py
shinio/bib/: abet.bib  conf.bib  invt.bib  jrnl.bib  prep.bib  selected.bib  short.bib
shinio/data/: data.yaml  template.html
shinio/extra/: temp.html.html
shinmitedu/: __init__.py  __main__.py
software/: index.html
src/: ShinGroupIO.jl  ShinIO.jl
template/: template.html
tex/: _region_.tex  affiliations.tex  appointment.tex  awards.tex  build.jl  education.tex  grants.tex  mentoring.tex  preamble.tex  presentations.tex  publications.tex  references.tex  shin-abet.tex  shin-short.tex  shin.tex  software.tex  teaching.tex
values/: index.html
(+20 files in other folders)
