[project]
name = "shinio"
version = "0.1.0"
description = "Website generator for the MIT Shin Group"
authors = [
    { name = "Sungho Shin", email = "sushin@mit.edu" },
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    "markdown>=3.3.4",
    "pybtex>=0.25",
    "setuptools<=79",
    "PyYAML==6.0.2",
    "livereload>=2",
]
